# warframe-damage-calculator-app

./: README.md  pyproject.toml  requirements.txt  rxconfig.py
.web/: package.json  reflex.install_frontend_packages.cached  reflex.json
.web/app/: root.jsx
.web/app/routes/: _index.jsx
.web/styles/: styles.css
.web/utils/: context.js
assets/: styles.css
reflex.lock/: package.json
warframe_reflex/: .gitignore  README.md  components.py  constants.py  data.py  engine.py  pyproject.toml  requirements.txt  rxconfig.py  state.py  warframe_reflex.py
warframe_reflex/warframe_reflex/: __init__.py  components.py  constants.py  data.py  engine.py  models.py  state.py  warframe_reflex.py
