[project]
name = "warframe-damage-calculator-reflex"
version = "0.1.0"
description = "Reflex interface for warframe_damage_calculator"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.8.28,<0.9",
    "warframe-damage-calculator @ git+https://github.com/AAAA0001/warframe-damage-calculator.git@main",
]

[tool.uv]
package = false
